Zerosx Cloud多租户开发平台的初个基于JDK17的RC版本，后续基于JDK17或以上的版本号规则是2.x.x，对应代码分支是2.x.x。此次更新的特性如下： 1.添加版本管理插件 2.将验证码、短信发送功能移入zerosx-resource服务 3.集成美团Leaf分布式ID生成方案 4.集成dynamic-datasource多数据源（项目中应用场景是MySQL一主一从模式，其他场景需自行测试验证） 5.补全逻辑：用户和运营商非正常状态下无法操作任何数据 6.重新整理MD说明文档和组件部署文档 7.其他功能优化：1）字段翻译功能；2）Redis的key定义规范化和简单化；3）前端删除提示语优化等等